forge/tests/error/froglet-ast-bind.frg
#lang froglet

pred foo {
  bind foo = true  {}
}
